--- a/FrontEnd/src/styles/_variables.scss
+++ b/FrontEnd/src/styles/_variables.scss
@@ -7,6 +7,7 @@ $darker-secondary: darken(#b3a69a, 5%);
 $darker2-secondary: darken($darker-secondary, 5%);
 $accent: #DAA520;
 $tertiary: #2f362e;
+$tertiary-transparent: rgba($tertiary, 0.8);
 $background: #212124;
 $text: #FCF8F5;
 $text-dark: #212124;
